# foundation-python-sdk

./: README.md  pyproject.toml
foundation/: LICENSE  __init__.py  csv_builder.py  exceptions.py  ref_data.py  sys_config.py  utils.py
foundation/models/: __init__.py  _custom_table_fields.py  _init_helpers.py  _loss_export.py  base.py  broker.py  broker_office.py  category.py  category_detail.py  client.py  collections.py  currency.py  custom_field.py  custom_table.py  custom_table_row.py  event_set.py  foundation_client.py  layer.py  layer_limit_attach_type.py  layer_participant.py  layer_premium_type.py  layer_status.py  layered_losses.py  loss_group.py  loss_set_result.py  module_custom_table.py  participant.py  participant_status.py  peril.py  perspective.py  program.py  program_broker.py  program_categories.py  program_external_refs.py  reference_run.py  reference_runs.py  region.py  reinst_prem_base.py  reinstatement.py  run_configuration.py  (+5 more)
